feat(theme-generator): add border radius to settings

--- a/apps/web/src/components/PresetSwitcher.astro
+++ b/apps/web/src/components/PresetSwitcher.astro
@@ -42,7 +42,7 @@ const defaultAccentDark = defaultPreset?.styles?.dark?.accent || "#888";
       class="preset-switcher-trigger w-[180px] justify-start gap-2"
     >
       <PresetSwitcherTriggerIsland server:defer>
-        <Skeleton class="w-[160px] h-4 rounded-lg" slot="fallback" />
+        <Skeleton class="w-[1672px] h-5 rounded-sm" slot="fallback" />
       </PresetSwitcherTriggerIsland>
     </Button>
     <!-- <Button
