chore(docs): update introduction

--- a/apps/web/src/pages/ui-demo.astro
+++ b/apps/web/src/pages/ui-demo.astro
@@ -67,7 +67,7 @@ import {
 } from "@bejamas/ui/components/dialog";
 ---
 
-<BlockExampleLayout theme="default">
+<BlockExampleLayout>
   <section
     class="max-w-7xl pt-0 px-0 pb-10 md:pt-10 lg:py-20 mx-auto sm:px-5 grid grid-cols-1 md:grid-cols-8 lg:grid-cols-12 gap-10"
   >
