--- a/packages/ui/src/components/tabs/TabsList.astro
+++ b/packages/ui/src/components/tabs/TabsList.astro
@@ -15,7 +15,7 @@ const {
 } = Astro.props as Props;
 
 const tabsListVariants = cva(
-  "bg-muted border border-input text-secondary-foreground relative inline-flex h-12 w-fit items-center rounded-md p-1",
+  "bg-muted border border-input overflow-auto text-secondary-foreground relative inline-flex w-fit items-center rounded-md p-1",
 );
 ---
 
