--- a/packages/ui/src/components/card/Card.astro
+++ b/packages/ui/src/components/card/Card.astro
@@ -9,7 +9,7 @@
  *
  * <Card class="w-full max-w-sm">
  *   <CardMedia class="m-1">
- *     <img src="https://images.unsplash.com/photo-1578637387939-43c525550085?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2340" alt="Everest" class="w-full h-full object-cover" />
+ *     <img src="https://gradient.bejamas.com/api/gradient.png?funkiness=30&contrast=0&w=748&h=500&seed=bejamas" alt="Gradient Cover" class="w-full h-full object-cover" width="374" height="250" loading="lazy" />
  *   </CardMedia>
  *   <CardHeader>
  *     <div class="flex items-center gap-2 justify-between">
