--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -34,6 +34,13 @@ import {
   Check,
 } from "@lucide/astro";
 
+import {
+  NavigationMenu,
+  NavigationMenuList,
+  NavigationMenuItem,
+  NavigationMenuTrigger,
+} from "@bejamas/ui/components/navigation-menu";
+
 import Icon from "./icons/Icon.astro";
 import ThemeEditorGlobal from "./theme-editor/ThemeEditorGlobal.astro";
 
@@ -258,6 +265,13 @@ const options = [...filteredDefaultOptions, ...customOptions];
       <p>Hidden content here</p>
     </TooltipContent>
   </Tooltip>
+  <NavigationMenu>
+    <NavigationMenuList>
+      <NavigationMenuItem>
+        <NavigationMenuTrigger>Toggle</NavigationMenuTrigger>
+      </NavigationMenuItem>
+    </NavigationMenuList>
+  </NavigationMenu>
 </div>
 
 <style>
